--- a/blog_index.html
+++ b/blog_index.html
@@ -4,12 +4,13 @@ layout: default
 
 <div>
 
-  <h2>Articles</h2>
+  <!-- <h1 >Articles</h1> -->
 
   <ul class = "post_list">
   {% for post in site.posts %}
     <li>
-      <a href="{{ post.url }}">{{ post.title }}</a>
+      <a href="{{ post.url }}">{{ post.title}}</a>
+      <p> {{post.date | date: '%B %d, %Y'}}</>
       <!-- {{ post.excerpt }} -->
     </li>
   {% endfor %}
